# Crayfish

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/res/shaders/: frag.glsl  frag.spv  vert.glsl  vert.spv
engine/src/: def.h  entry.h  test.c  test.h
engine/src/core/: application.c  application.h  assertion.h  cf_math.h  cf_memory.c  cf_memory.h  event.c  event.h  filesystem.c  filesystem.h  logger.c  logger.h
engine/src/platform/: platform.h  platform_check.h  platform_linux.c  platform_win32.c  platform_window.h
engine/src/platform/linux/: platform_linux.h  platform_window_linux.c
engine/src/platform/win32/: platform_win32.h  platform_window_win32.c
engine/src/renderer/: renderer.c  renderer.h  vertex_buffer.h
engine/src/renderer/vulkan_backend/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_command_buffers.c  vulkan_command_buffers.h  vulkan_def.h  vulkan_device.c  vulkan_device.h  vulkan_framebuffers.c  vulkan_framebuffers.h  vulkan_graphics_pipeline.c  vulkan_graphics_pipeline.h  vulkan_index_buffer.c  vulkan_index_buffer.h  vulkan_platform.h  vulkan_platform_linux.c  vulkan_platform_win32.c  vulkan_render_pass.c  vulkan_render_pass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_sync_objects.c  vulkan_sync_objects.h  vulkan_utils.c  vulkan_utils.h  vulkan_vertex_buffer.c  vulkan_vertex_buffer.h
testapp/: CMakeLists.txt
testapp/src/: entry.c  testapp.c
